src/alter/DartParser.java
// Generated from java-escape by ANTLR 4.11.1
package alter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_TYPE=1, STRING_TYPE=2, BOOL_TYPE=3, FLOAT_TYPE=4, DOUBLE_TYPE=5, CP=6, 
		DOT=7, E=8, EE=9, EGT=10, GT=11, LE=12, LL=13, LLE=14, LT=15, MIN=16, 
		MINMIN=17, MOD=18, MODE=19, MUL=20, MULE=21, NE=22, OB=23, OP=24, P=25, 
		PE=26, POUND=27, PP=28, Q=29, QD=30, QDD=31, QQ=32, MIE=33, SCO=34, DIV=35, 
		SLE=36, TE=37, POW=38, COT=39, START=40, END=41, AA=42, AND=43, ANDE=44, 
		AT=45, B=46, NOT=47, OR=48, BE=49, CB=50, CO=51, COM=52, ASSERT=53, BREAK=54, 
		CASE=55, CATCH=56, CLASS=57, CONST=58, CONTINUE=59, DEFAULT=60, DO=61, 
		ELSE=62, ENUM=63, EXTENDS=64, FALSE=65, FINAL=66, FINALLY=67, FOR=68, 
		IF=69, IN=70, IS=71, NEW=72, NULL=73, RETHROW=74, RETURN=75, SUPER=76, 
		SWITCH=77, THIS=78, THROW=79, TRUE=80, TRY=81, VAR=82, VOID=83, WHILE=84, 
		WITH=85, ABSTRACT=86, AS=87, COVARIANT=88, DEFERRED=89, DYNAMIC=90, EXPORT=91, 
		EXTENSION=92, EXTERNAL=93, FACTORY=94, FUNCTION=95, GET=96, IMPLEMENTS=97, 
		IMPORT=98, INTERFACE=99, LATE=100, LIBRARY=101, OPERATOR=102, MIXIN=103, 
		PART=104, REQUIRED=105, SET=106, STATIC=107, TYPEDEF=108, AWAIT=109, YIELD=110, 
		ASYNC=111, HIDE=112, OF=113, ON=114, SHOW=115, SYNC=116, NATIVE=117, INT_NUM=118, 
		FLOAT_NUM=119, STRING=120, STRING_singl=121, ID=122, COMMENT=123, MULTI_LINE_COMMENT=124, 
		WS=125;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_stat = 2, RULE_if_stat = 3, RULE_stat_block = 4, 
		RULE_loops = 5, RULE_while_stat = 6, RULE_do_while_stat = 7, RULE_obj_or_fun_or_Other = 8, 
		RULE_callFunction = 9, RULE_funOfObj = 10, RULE_incrementVar = 11, RULE_for_stat = 12, 
		RULE_forinitstatement = 13, RULE_condition = 14, RULE_decFun = 15, RULE_funName = 16, 
		RULE_returnType = 17, RULE_parameterPart = 18, RULE_parameter = 19, RULE_parameters = 20, 
		RULE_parameterPartDec = 21, RULE_parameterDec = 22, RULE_parametersDec = 23, 
		RULE_functionBody = 24, RULE_return = 25, RULE_switch_stat = 26, RULE_switch_key = 27, 
		RULE_switchBody = 28, RULE_classDeclaration = 29, RULE_propretes = 30, 
		RULE_property = 31, RULE_classMethods = 32, RULE_method = 33, RULE_constructor = 34, 
		RULE_superclass = 35, RULE_interfaces = 36, RULE_typeNotVoid = 37, RULE_typeNotVoidList = 38, 
		RULE_mixins = 39, RULE_metadata = 40, RULE_metadatum = 41, RULE_typeParameter = 42, 
		RULE_typeParameters = 43, RULE_qualifiedName = 44, RULE_classBody = 45, 
		RULE_decVar = 46, RULE_variableType = 47, RULE_expr = 48, RULE_atom = 49, 
		RULE_comparison = 50, RULE_boolValue = 51, RULE_logical = 52, RULE_assignment = 53, 
		RULE_type_ID = 54, RULE_identi = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "stat", "if_stat", "stat_block", "loops", "while_stat", 
			"do_while_stat", "obj_or_fun_or_Other", "callFunction", "funOfObj", "incrementVar", 
			"for_stat", "forinitstatement", "condition", "decFun", "funName", "returnType", 
			"parameterPart", "parameter", "parameters", "parameterPartDec", "parameterDec", 
			"parametersDec", "functionBody", "return", "switch_stat", "switch_key", 
			"switchBody", "classDeclaration", "propretes", "property", "classMethods", 
			"method", "constructor", "superclass", "interfaces", "typeNotVoid", "typeNotVoidList", 
			"mixins", "metadata", "metadatum", "typeParameter", "typeParameters", 
			"qualifiedName", "classBody", "decVar", "variableType", "expr", "atom", 
			"comparison", "boolValue", "logical", "assignment", "type_ID", "identi"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "')'", "'.'", "'='", "'=='", "'>='", 
			"'>'", "'<='", "'<<'", "'<<='", "'<'", "'-'", "'--'", "'%'", "'%='", 
			"'*'", "'*='", "'!='", "'['", "'('", "'+'", "'+='", "'#'", "'++'", "'?'", 
			"'?.'", "'?..'", "'??'", "'-='", "';'", "'/'", "'/='", "'^='", "'^'", 
			"'\"'", "'{'", "'}'", "'&&'", "'&'", "'&='", "'@'", "'|'", "'!'", "'||'", 
			"'|='", "']'", "':'", "','", "'assert'", "'break'", "'case'", "'catch'", 
			"'class'", "'const'", "'continue'", "'default'", "'do'", "'else'", "'enum'", 
			"'extends'", "'false'", "'final'", "'finally'", null, null, "'in'", "'is'", 
			"'new'", "'null'", "'rethrow'", null, "'super'", null, "'this'", "'throw'", 
			null, "'try'", "'var'", "'void'", "'while'", "'with'", "'abstract'", 
			"'as'", "'covariant'", "'deferred'", "'dynamic'", "'export'", "'extension'", 
			"'external'", "'factory'", "'Function'", "'get'", "'implements'", "'import'", 
			"'interface'", "'late'", "'library'", "'operator'", "'mixin'", "'part'", 
			"'required'", "'set'", "'static'", "'typedef'", "'await'", "'yield'", 
			"'async'", "'hide'", "'of'", "'on'", "'show'", "'sync'", "'native'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT_TYPE", "STRING_TYPE", "BOOL_TYPE", "FLOAT_TYPE", "DOUBLE_TYPE", 
			"CP", "DOT", "E", "EE", "EGT", "GT", "LE", "LL", "LLE", "LT", "MIN", 
			"MINMIN", "MOD", "MODE", "MUL", "MULE", "NE", "OB", "OP", "P", "PE", 
			"POUND", "PP", "Q", "QD", "QDD", "QQ", "MIE", "SCO", "DIV", "SLE", "TE", 
			"POW", "COT", "START", "END", "AA", "AND", "ANDE", "AT", "B", "NOT", 
			"OR", "BE", "CB", "CO", "COM", "ASSERT", "BREAK", "CASE", "CATCH", "CLASS", 
			"CONST", "CONTINUE", "DEFAULT", "DO", "ELSE", "ENUM", "EXTENDS", "FALSE", 
			"FINAL", "FINALLY", "FOR", "IF", "IN", "IS", "NEW", "NULL", "RETHROW", 
			"RETURN", "SUPER", "SWITCH", "THIS", "THROW", "TRUE", "TRY", "VAR", "VOID", 
			"WHILE", "WITH", "ABSTRACT", "AS", "COVARIANT", "DEFERRED", "DYNAMIC", 
			"EXPORT", "EXTENSION", "EXTERNAL", "FACTORY", "FUNCTION", "GET", "IMPLEMENTS", 
			"IMPORT", "INTERFACE", "LATE", "LIBRARY", "OPERATOR", "MIXIN", "PART", 
			"REQUIRED", "SET", "STATIC", "TYPEDEF", "AWAIT", "YIELD", "ASYNC", "HIDE", 
			"OF", "ON", "SHOW", "SYNC", "NATIVE", "INT_NUM", "FLOAT_NUM", "STRING", 
			"STRING_singl", "ID", "COMMENT", "MULTI_LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DartParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			block();
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 2738188573441261630L) != 0 || (((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 72057594039437325L) != 0) {
				{
				{
				setState(115);
				stat();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SCO() { return getToken(DartParser.SCO, 0); }
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public DecFunContext decFun() {
			return getRuleContext(DecFunContext.class,0);
		}
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public DecVarContext decVar() {
			return getRuleContext(DecVarContext.class,0);
		}
		public Obj_or_fun_or_OtherContext obj_or_fun_or_Other() {
			return getRuleContext(Obj_or_fun_or_OtherContext.class,0);
		}
		public IncrementVarContext incrementVar() {
			return getRuleContext(IncrementVarContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public Switch_statContext switch_stat() {
			return getRuleContext(Switch_statContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				assignment();
				setState(122);
				match(SCO);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				if_stat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				decFun();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				loops();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				decVar();
				setState(128);
				match(SCO);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				obj_or_fun_or_Other();
				setState(131);
				match(SCO);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(133);
				incrementVar();
				setState(134);
				match(SCO);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(136);
				classDeclaration();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(137);
				switch_stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_statContext extends ParserRuleContext {
		public List<TerminalNode> IF() { return getTokens(DartParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(DartParser.IF, i);
		}
		public TerminalNode OP() { return getToken(DartParser.OP, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode CP() { return getToken(DartParser.CP, 0); }
		public List<Stat_blockContext> stat_block() {
			return getRuleContexts(Stat_blockContext.class);
		}
		public Stat_blockContext stat_block(int i) {
			return getRuleContext(Stat_blockContext.class,i);
		}
		public List<TerminalNode> ELSE() { return getTokens(DartParser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(DartParser.ELSE, i);
		}
		public If_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterIf_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitIf_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitIf_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_statContext if_stat() throws RecognitionException {
		If_statContext _localctx = new If_statContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_stat);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(IF);
			setState(141);
			match(OP);
			setState(142);
			condition();
			setState(143);
			match(CP);
			setState(144);
			stat_block();
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					match(ELSE);
					setState(146);
					match(IF);
					setState(147);
					condition();
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(153);
				match(ELSE);
				setState(154);
				stat_block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stat_blockContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(DartParser.START, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(DartParser.END, 0); }
		public TerminalNode BREAK() { return getToken(DartParser.BREAK, 0); }
		public TerminalNode SCO() { return getToken(DartParser.SCO, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public Stat_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterStat_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitStat_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitStat_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_blockContext stat_block() throws RecognitionException {
		Stat_blockContext _localctx = new Stat_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stat_block);
		int _la;
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(START);
				setState(158);
				block();
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BREAK) {
					{
					setState(159);
					match(BREAK);
					setState(160);
					match(SCO);
					}
				}

				setState(163);
				match(END);
				}
				break;
			case INT_TYPE:
			case STRING_TYPE:
			case BOOL_TYPE:
			case FLOAT_TYPE:
			case DOUBLE_TYPE:
			case CLASS:
			case CONST:
			case DO:
			case FINAL:
			case FOR:
			case IF:
			case SWITCH:
			case VAR:
			case VOID:
			case WHILE:
			case ABSTRACT:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopsContext extends ParserRuleContext {
		public Do_while_statContext do_while_stat() {
			return getRuleContext(Do_while_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public For_statContext for_stat() {
			return getRuleContext(For_statContext.class,0);
		}
		public LoopsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterLoops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitLoops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitLoops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopsContext loops() throws RecognitionException {
		LoopsContext _localctx = new LoopsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_loops);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DO:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				do_while_stat();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				while_stat();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				for_stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class While_statContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(DartParser.WHILE, 0); }
		public TerminalNode OP() { return getToken(DartParser.OP, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CP() { return getToken(DartParser.CP, 0); }
		public Stat_blockContext stat_block() {
			return getRuleContext(Stat_blockContext.class,0);
		}
		public While_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterWhile_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitWhile_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitWhile_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_statContext while_stat() throws RecognitionException {
		While_statContext _localctx = new While_statContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_while_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(WHILE);
			setState(174);
			match(OP);
			setState(175);
			condition();
			setState(176);
			match(CP);
			setState(177);
			stat_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Do_while_statContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(DartParser.DO, 0); }
		public Stat_blockContext stat_block() {
			return getRuleContext(Stat_blockContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(DartParser.WHILE, 0); }
		public TerminalNode OP() { return getToken(DartParser.OP, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CP() { return getToken(DartParser.CP, 0); }
		public Do_while_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_while_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterDo_while_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitDo_while_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitDo_while_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_while_statContext do_while_stat() throws RecognitionException {
		Do_while_statContext _localctx = new Do_while_statContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_do_while_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(DO);
			setState(180);
			stat_block();
			setState(181);
			match(WHILE);
			setState(182);
			match(OP);
			setState(183);
			condition();
			setState(184);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
